--- a/yes.html
+++ b/yes.html
@@ -1,1 +1,20 @@
 
+<!DOCTYPE html>
+<html lang="en">
+   <head>
+       <link rel="stylesheet" href="./style/css/yes_styles.css">
+       
+   </head> 
+   <body>
+       <div class="container">
+           <div >
+               <h1 class = "header_text">لصصص قووووو </h1>
+           </div>
+           <div class="gif_container">
+               <img src="https://i.makeagif.com/media/10-11-2015/aLjWR4.gif" alt="Cute animated illustration">
+           </div>
+           <p class = "text"> بجعلخ دوم لاصبعك انا ذا المره!</p>
+       </div>
+      
+   </body> 
+</html>
