--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
    <body>
        <div class="container">
            <div>
-               <h1 class = "header_text">شرايك نطلع بتاريخ 8 فبراير ؟</h1>
+               <h1 class = "header_text">نروح سيلف ميد الأربعاء 21 فبراير ؟</h1>
            </div>
            <div class="gif_container">
-               <img src="https://media1.giphy.com/media/ieW5dfu5bWoP6/giphy.gif" alt="Cute animated illustration">
+               <img src="https://tenor.com/bVFoO.gif" alt="Cute animated illustration">
            </div>
            <div class = "buttons">
                <button class="btn" id = "yesButton" onclick="nextPage()">Yes</button>
