--- a/yes.html
+++ b/yes.html
@@ -8,12 +8,12 @@
    <body>
        <div class="container">
            <div >
-               <h1 class = "header_text">لصصص قووووو </h1>
+               <h1 class = "header_text"> ونغني love is an open door 🥹 </h1>
            </div>
            <div class="gif_container">
-               <img src="https://i.makeagif.com/media/10-11-2015/aLjWR4.gif" alt="Cute animated illustration">
+               <img src="https://tenor.com/bRuFl.gif" alt="Cute animated illustration">
            </div>
-           <p class = "text"> بجعلخ دوم لاصبعك انا ذا المره!</p>
+           <p class = "text"> يا رب توافقين 💔!</p>
        </div>
       
    </body> 
