--- a/yes.html
+++ b/yes.html
@@ -11,7 +11,7 @@
                <h1 class = "header_text"> ونغني love is an open door 🥹 </h1>
            </div>
            <div class="gif_container">
-               <img src="https://tenor.com/bRuFl.gif" alt="Cute animated illustration">
+               <img src="https://tenor.com/view/yippee-gif-25103253" alt="Cute animated illustration">
            </div>
            <p class = "text"> يا رب توافقين 💔!</p>
        </div>
