--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                <h1 class = "header_text">نروح سيلف ميد الأربعاء 21 فبراير ؟</h1>
            </div>
            <div class="gif_container">
-               <img src="https://i.pinimg.com/originals/ec/89/c9/ec89c9122d48952d5654090a8ce9cac2.gif" alt="Cute animated illustration">
+               <img src="https://media.tenor.com/hpgCwxnBaK8AAAAj/milk-and-mocha.gif" alt="Cute animated illustration">
            </div>
            <div class = "buttons">
                <button class="btn" id = "yesButton" onclick="nextPage()">Yes</button>
