--- a/yes.html
+++ b/yes.html
@@ -11,7 +11,7 @@
                <h1 class = "header_text"> ونغني love is an open door 🥹 </h1>
            </div>
            <div class="gif_container">
-               <img src="https://media.tenor.com/6ZkqTdHxn4QAAAAC/amirlotan-grandmother.gif" alt="Cute animated illustration">
+               <img src="https://pa1.aminoapps.com/6886/b799544e541c27a706d72ad9a101a5594e64827dr1-450-200_hq.gif" alt="Cute animated illustration">
            </div>
            <p class = "text"> يا رب توافقين 💔!</p>
        </div>
